added css rules to carousel components and put real images from json data

--- a/package.json
+++ b/package.json
@@ -25,6 +25,12 @@
       "react-app/jest"
     ]
   },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 4,
+    "semi": false,
+    "singleQuote": true
+  },
   "browserslist": {
     "production": [
       ">0.2%",
